# mcp-server-steam

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CONFIG.md  GITHUB_SETUP.md  MANIFEST.in  PUSH_TO_GITHUB.md  README.md  config.py  pyproject.toml  server.py  steam_client.py
.ai/: AGENTS.md  AI.ignore  CONTEXT.md  ROADMAP.md
.claude/: project_settings.json
.github/workflows/: publish.yml
docs/plans/: 2026-02-24-pypi-packaging.md  2026-02-24-v1.0.0-github-release-design.md  2026-02-24-v1.0.0-github-release.md
src/mcp_server_steam/: __init__.py  __main__.py  config.py  server.py  steam_client.py
src/mcp_server_steam/tools/: __init__.py  community.py  games.py  profile.py
tools/: community.py  games.py  profile.py
