[project]
name = "steam-mcp-server"
version = "1.0.0"
description = "MCP Server for Steam Web API integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==3.0.0b2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
steam-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
