[project]
name = "mcp-server-steam"
version = "1.0.5"
description = "MCP Server for Steam Web API integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Crong", email = "deuxksy@gmail.com"}
]
maintainers = [
    {name = "Crong", email = "deuxksy@gmail.com"}
]
keywords = ["mcp", "steam", "steam-api", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=3.0.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/deuxksy/mcp-server-steam"
Repository = "https://github.com/deuxksy/mcp-server-steam"
Issues = "https://github.com/deuxksy/mcp-server-steam/issues"

[project.scripts]
mcp-server-steam = "mcp_server_steam:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_steam"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[dependency-groups]
dev = []

[tool.pylint.messages_control]
disable = [
    "C0111", # missing-docstring (TODO: 문서화 진행 중)
    "C0103", # invalid-name (TODO: 명명 규칙 조정 후 제거)
    "R0903", # too-few-public-methods
]

max-line-length = 100

[tool.pylint.typecheck]
ignored-modules = ["fastmcp"]

[tool.pylint.per-file-ignores]
"tests/*" = [
    "missing-docstring",
    "invalid-name",
]
